--- a/.gitignore
+++ b/.gitignore
@@ -17,6 +17,9 @@ build
 .DS_Store
 *.pem
 
+# production
+/build
+
 # debug
 npm-debug.log*
 yarn-debug.log*
@@ -34,3 +37,13 @@ storybook-static/
 /playwright/.cache/
 
 /.npm-only-allow
+
+# env files
+.env*
+
+# vercel
+.vercel
+
+# typescript
+*.tsbuildinfo
+next-env.d.ts
