Implement WhatsApp integration and enhance ESLint configuration
- Add a new useWhatsApp hook to manage WhatsApp interactions and configuration based on the current page.
- Introduce a WordRotate component for dynamic text display in the HeroSection.
- Update various components to utilize the WhatsApp functionality, including ContactSection, WhatsAppFloat, and PaquetesBusPage.
- Disable specific ESLint rules related to import sorting to streamline code organization.
- Add a new .eslintrc.json file for consistent linting across the project.
- Include a new favicon for branding consistency.

--- a/package.json
+++ b/package.json
@@ -41,6 +41,7 @@
     "clsx": "^2.1.1",
     "lodash": "^4.17.21",
     "lucide-react": "^0.539.0",
+    "motion": "^12.23.12",
     "next": "15.3.3",
     "prisma": "^6.13.0",
     "react": "^19.1.0",
@@ -104,6 +105,10 @@
   },
   "packageManager": "pnpm@10.0.0",
   "pnpm": {
-    "onlyBuiltDependencies": ["@prisma/client", "@prisma/engines", "prisma"]
+    "onlyBuiltDependencies": [
+      "@prisma/client",
+      "@prisma/engines",
+      "prisma"
+    ]
   }
 }
