--- a/package.json
+++ b/package.json
@@ -54,6 +54,7 @@
     "react": "^19.1.0",
     "react-dom": "^19.1.0",
     "react-hook-form": "^7.62.0",
+    "react-intersection-observer": "^9.16.0",
     "tailwind-merge": "^2.6.0",
     "zod": "^3.24.4"
   },
